--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,15 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <!--MAVEN dependency for GSON-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+
     </dependencies>
 
     <build>
