--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
     <!--db-->
     <resource-ref>
         <description>JDBC connection</description>
-        <res-ref-name>jdbc/library</res-ref-name>
+        <res-ref-name>jdbc/week</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
